--- a/app/templates/catalog/detail.hbs
+++ b/app/templates/catalog/detail.hbs
@@ -2,27 +2,28 @@
   <div class="container-fluid">
     <div class="container container-catalog">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-5">
           <ul class="use-icons">
             <li class="use-icon-foam"></li>
             <li class="use-icon-brush"></li>
             <li class="use-icon-disinfection"></li>
           </ul>
-          <div class="title"><span class="yellow">Merafoam<sup>&copy;</sup></span> CL</div>
+          <div class="title"><span style="color: #ccb622">Merafoam<sup>&copy;</sup></span> CL</div>
           <div class="body">Щелочное пенное моющее и дезинфицирующее средство с содержанием активного хлора</div>
           <div class="registration">ЕВРАЗЭС <b>RU.40.01.05.015.E.002351.07.11</b> от 06.07.2011</div>
-          <div class="ph">pH<span>12,0</span></div>
+          <div class="ph">pH <span style="color: #ccb622">12,0</span></div>
           <!--div class="button button-transparent button-download"></div-->
         </div>
       </div>
     </div>
   </div>
+  <img src="assets/images/canister.png">
+  <div class="heading heading-bottom"><div class="title title-dark">о продукте</div></div>
 </article>
 <article class="catalog-block-about">
   <div class="container-fluid container-white">
     <div class="container container-catalog">
-      <div class="heading heading-top"><div class="title title-dark title-offset-top">о продукте</div></div>
-
+      <div class="heading heading-bottom"></div>
       <div class="row">
         <div class="col-md-3">
           <div class="paragraph padded">
@@ -67,7 +68,7 @@
 <article class="catalog-block-specs">
   <div class="container-fluid container-grey">
     <div class="container container-catalog">
-      <div class="heading heading-top"><div class="title title-dark">спецификации</div></div>
+      <div class="heading heading-top"></div>
 
       <div class="row">
         <div class="col-md-3">
@@ -119,7 +120,7 @@
                 </tr>
                 <tr>
                   <td>Цвет</td>
-                  <td><span class="circle circle-yellow"></span>Желтый</td>
+                  <td><span class="circle" style="background-color: #ccb622"></span>Желтый</td>
                 </tr>
                 <tr>
                   <td>Плотность</td>
@@ -214,7 +215,6 @@
         <div class="col-md-2">
           <div class="catalog-image">
             <img src="">
-            <div class="button button-narrow">Смотреть каталог</div>
           </div>
         </div>
         <div class="col-md-4">
@@ -222,7 +222,7 @@
           <div class="subarticle">
             <div class="title">Explore foam eqipment</div>
             <div class="body">Применяется для автоматической и ручной комбинированной наружной мойки и дезинфекции технологического оборудования на предприятиях птицеперерабатывающей.</div>
-            <div class="button button-red">Смотреть каталог</div>
+            <div class="button button-narrow button-download">Скачать каталог</div>
           </div>
         </div>
       </div>
