--- a/app/styles/buttons.scss
+++ b/app/styles/buttons.scss
@@ -21,6 +21,9 @@
     text-transform: uppercase;
     font-size: 1em;
     font-weight: 900;
+    min-width: 65px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
   &.button-transparent{
     margin-top: 10px;
