--- a/app/styles/components.scss
+++ b/app/styles/components.scss
@@ -8,7 +8,7 @@
   margin-left: auto;
   padding-left: 0px;
   padding-right: 0px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 @media (min-width: 768px) {
   .container {
