--- a/app/templates/catalog/index.hbs
+++ b/app/templates/catalog/index.hbs
@@ -1,3 +1,371 @@
-<section class="catalog-header">
-  <div class="title"></div>
-</section>
+<article class="catalog-header">
+  <div class="container-fluid">
+    <div class="container">
+			<div class="page-title">Professional hygiene solutions</div>
+			<div class="body controls">
+				<div class="centered-input">
+					<input placeholder="Search">
+				</div>
+			</div>
+		</div>
+	</div>
+  <div class="container-fluid container-border">
+	    <div class="tabs-menu-wrapper">
+	    	<ul class="tabs-menu">
+	    		<!--li>
+					  <button type="button" class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					    Тип продукта
+					  </button>
+					  <div class="dropdown-menu catalog-filter-container">
+						  <ul class="filter-list container">
+				        <li class="cows">
+				          <span>Внешняя мойка</span>
+				        </li>
+				        <li class="chicken">
+				          <span>Внутренняя мойка</span>
+				        </li>
+				        <li class="pigs">
+				          <span>Дезинфекция</span>
+				        </li>
+				        <li class="meat">
+				          <span>Смазки</span>
+				        </li>
+				        <li class="beer">
+				          <span>Животноводство</span>
+				        </li>
+				        <li class="milk">
+				          <span>Усиливающие добавки</span>
+				        </li>
+				        <li class="laundry">
+				          <span>Другие средства</span>
+				        </li>
+			        </ul>
+					  </div>
+	    		</li-->
+	    		<li>
+					  <button type="button" class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					    Сфера применения
+					  </button>
+					  <div class="dropdown-menu catalog-filter-container">
+						  <ul class="industry-filter filter-list container">
+				        <li class="cows">
+				          <span>Cow breeding</span>
+				        </li>
+				        <li class="chicken">
+				          <span>Poultry</span>
+				        </li>
+				        <li class="pigs">
+				          <span>Pig farms</span>
+				        </li>
+				        <li class="meat">
+				          <span>Meat processing</span>
+				        </li>
+				        <li class="beer">
+				          <span>Brewery &amp; Soft drinks</span>
+				        </li>
+				        <li class="milk">
+				          <span>Milk industry</span>
+				        </li>
+				        <li class="laundry">
+				          <span>Laundry</span>
+				        </li>
+			        </ul>
+					  </div>
+					</li>
+	    		<li>
+					  <button type="button" class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					    Пенообразование
+					  </button>
+					  <div class="dropdown-menu catalog-filter-container">
+						  <div class="container container-center">
+							  <form class="radio-set">
+								  <input class="radio-input" type="radio" id="radio1" name="radio-category" checked>
+									<label class="radio-label" for="radio1">All</label>
+
+									<input class="radio-input" type="radio" id="radio2" name="radio-category" >
+									<label class="radio-label" for="radio2">Foaming</label>
+
+									<input class="radio-input" type="radio" id="radio3" name="radio-category" >
+									<label class="radio-label" for="radio3">Not foaming</label>
+							  </form>
+						  </div>
+					  </div>
+	    		</li>	
+	    		<li>
+					  <button type="button" class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					    Кислотность (рН)
+					  </button>
+					  <div class="dropdown-menu catalog-filter-container">
+					  	<div class="acid-filter container">
+						  	<ul>
+						  		<li class="acidic"><span>Acidic</span></li>
+						  		<li class="neutral"><span>Neutral</span></li>
+						  		<li class="alkalic"><span>Alkalic</span></li>
+						  	</ul>
+						  	<div class="scale"><b>1</b> <b>2</b> <b>3</b> <b>4</b> <b>5</b> <b>6</b> <b>7</b> <b>8</b> <b>9</b> <b>10</b> <b>11</b></div>
+						  	<div class="spectre"></div>
+						  </div>
+					  </div>
+	    		</li>
+	    	</ul>
+			</div>
+	</div>
+</article>
+<article>
+  <div class="container-fluid catalog-heading heading-foam">
+  	
+  </div>
+  <div class="container-fluid container-grey">
+		<div class="container">
+      <div class="heading heading-top">
+      	<span class="title title-dark">внешняя мойка</span>
+      </div>
+	    <div class="row">
+	      <div class="col-md-12">
+	        <div class="catalog-list">
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+		      </div>
+	      </div>
+	    </div>
+	  </div>
+  </div>
+</article>
+<article>
+  <div class="container-fluid catalog-heading heading-cip"></div>
+  <div class="container-fluid container-grey">
+		<div class="container">
+      <div class="heading heading-top">
+      	<span class="title title-dark">внешняя мойка</span>
+      </div>
+	    <div class="row">
+	      <div class="col-md-12">
+	        <div class="catalog-list">
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+		      </div>
+	      </div>
+	    </div>
+	  </div>
+  </div>
+</article>
+<article>
+  <div class="container-fluid catalog-heading heading-additive"></div>
+  <div class="container-fluid container-grey">
+		<div class="container">
+      <div class="heading heading-top">
+      	<span class="title title-dark">внешняя мойка</span>
+      </div>
+	    <div class="row">
+	      <div class="col-md-12">
+	        <div class="catalog-list">
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+		      </div>
+	      </div>
+	    </div>
+	  </div>
+  </div>
+</article>
+<article>
+  <div class="container-fluid catalog-heading heading-farm"></div>
+  <div class="container-fluid container-grey">
+		<div class="container">
+      <div class="heading heading-top">
+      	<span class="title title-dark">внешняя мойка</span>
+      </div>
+	    <div class="row">
+	      <div class="col-md-12">
+	        <div class="catalog-list">
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+		      </div>
+	      </div>
+	    </div>
+	  </div>
+  </div>
+</article>
+<article>
+  <div class="container-fluid catalog-heading heading-disinfection"></div>
+  <div class="container-fluid container-grey">
+		<div class="container">
+      <div class="heading heading-top">
+      	<span class="title title-dark">внешняя мойка</span>
+      </div>
+	    <div class="row">
+	      <div class="col-md-12">
+	        <div class="catalog-list">
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+		      </div>
+	      </div>
+	    </div>
+	  </div>
+  </div>
+</article>
+<article>
+  <div class="container-fluid catalog-heading heading-laundry"></div>
+  <div class="container-fluid container-grey">
+		<div class="container">
+      <div class="heading heading-top">
+      	<span class="title title-dark">внешняя мойка</span>
+      </div>
+	    <div class="row">
+	      <div class="col-md-12">
+	        <div class="catalog-list">
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+		      </div>
+	      </div>
+	    </div>
+	  </div>
+  </div>
+</article>
+<article>
+  <div class="container-fluid catalog-heading heading-grease"></div>
+  <div class="container-fluid container-grey">
+		<div class="container">
+      <div class="heading heading-top">
+      	<span class="title title-dark">внешняя мойка</span>
+      </div>
+	    <div class="row">
+	      <div class="col-md-12">
+	        <div class="catalog-list">
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	<div class="item">
+	        		<img src="assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+		      </div>
+	      </div>
+	    </div>
+	  </div>
+  </div>
+</article>
