map has been added

--- a/app/templates/components/main-navigation.hbs
+++ b/app/templates/components/main-navigation.hbs
@@ -51,7 +51,7 @@
               <li><a href="#">One more separated link</a></li>
             </ul>
           </li>
-          <li><a href="#">Контакты</a></li>
+          <li>{{#link-to "contacts"}}Контакты{{/link-to}}</li>
         </ul>
       <!--
         {{#link-to "subscribers" tagName="li"}}
