--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,6 +7,7 @@
 @import 'typography';
 @import 'buttons';
 @import 'catalog';
+@import 'contacts';
 
 /* RESET */
 html,body,div,ul,li,dl,dt,dd,h1,h2,h3,h4,h5,h6,pre,form,p,blockquote,fieldset,input, menu, section, button { margin: 0; padding: 0; }
@@ -116,7 +117,6 @@ body{
   text-rendering: auto;
   color: #3b3d3f;
   font-size: 1em;
-  min-height: 1000px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
