--- a/app/styles/news.scss
+++ b/app/styles/news.scss
@@ -10,8 +10,9 @@
 		}
 	}
 }
+
 .news-header{
-	.page-title{
+	.title{
 		color: #ffffff;
 		text-align: center;
 		font-size: 2.8em;
@@ -20,6 +21,7 @@
 	    margin-bottom: 40px;
 	}
 	.body{
+		padding: 10px;
 		&.controls{
 			padding-top: 35px;
 			padding-bottom: 35px;
@@ -31,7 +33,7 @@
 	    		font-family: 'etelka-light';
 				font-size: 2.2em;
 				color: #ffffff;
-				select-wrapper{
+				.select-wrapper{
 					background: transparent;
 					border: none;
 					.select{
