--- a/app/templates/press_center.hbs
+++ b/app/templates/press_center.hbs
@@ -1,7 +1,7 @@
 <article class="news-header">
   <div class="container-fluid">
     <div class="container">
-			<div class="page-title">Press Center</div>
+			<div class="page-title title">Press Center</div>
 			<div class="body controls">
 				<div class="select-wrapper">looking for
 					<div class="select">
